--- a/Pertemuan1/hello.html
+++ b/Pertemuan1/hello.html
@@ -7,7 +7,7 @@
 
     <body>
         <p>
-            Hello World! <br>Welcome to my <b>first</b> HTML Page.
+            Hello World! Welcome to my <b>first</b> HTML Page.
         </p>
     </body>
 </html>
