--- a/Pertemuan1/warna.html
+++ b/Pertemuan1/warna.html
@@ -8,6 +8,6 @@
     <body bgcolor="aqua">
         <h3 align="center">Heading 3</h3>
         <font color="red">Font berwarna merah</font><br><br>
-        <font color="#FF0000">Font berwarna mwrah (menggunakan nilai heksa)</font>
+        <font color="#FF0000">Font berwarna merah (menggunakan nilai heksa)</font>
     </body>
 </html>
