--- a/Pertemuan1/gambar.html
+++ b/Pertemuan1/gambar.html
@@ -12,11 +12,13 @@
             Vivamus sem nibh, fermentum a dolor maximus, maximus feugiat nibh.
             Duis vel condimentum lacus. Integer euismod ligula vel turpis auctor,
             a malesuada interdum.
+            <br>
+            <hr>
         </p>
 
         <p>
             <!--Menggunakan Path Absolute-->
-            <img src="../PRAKTIKUM_PEMRWEB/Pertemuan1/img/bunga1.jpeg" align="right">
+            <img src="../Pertemuan1/img/bunga1.jpeg" align="right">
             Vivamus sem nibh, fermentum a dolor maximus, maximus feugiat nibh.
             Duis vel condimentum lacus. Integer euismod ligula vel turpis auctor,
             a malesuada interdum.
