--- a/Pertemuan1/buatTable.html
+++ b/Pertemuan1/buatTable.html
@@ -9,6 +9,9 @@
                 <td>ini baru baris pertama kolom pertama</td>
                 <td>ini baru baris pertama kolom kedua</td>
             </tr>
+            <tr>
+                <td>ini baru baris pertama kolom pertama</td>
+            </tr>
         </table>
     </body>
 </html>
