--- a/Pertemuan1/buatTable.html
+++ b/Pertemuan1/buatTable.html
@@ -4,13 +4,13 @@
     </head>
 
     <body>
-        <table border="1">
+        <table border="1" height="100" widht="40">
             <tr>
                 <td>ini baru baris pertama kolom pertama</td>
                 <td>ini baru baris pertama kolom kedua</td>
             </tr>
             <tr>
-                <td>ini baru baris pertama kolom pertama</td>
+                <td>ini baru baris kedua kolom pertama</td>
             </tr>
         </table>
     </body>
