--- a/Pertemuan1/buatTable.html
+++ b/Pertemuan1/buatTable.html
@@ -4,7 +4,7 @@
     </head>
 
     <body>
-        <table border="1" height="100" widht="40">
+        <table border="1" height="100" widht="40" cellpadding="20">
             <tr>
                 <td>ini baru baris pertama kolom pertama</td>
                 <td>ini baru baris pertama kolom kedua</td>
