--- a/Pertemuan1/buatTable.html
+++ b/Pertemuan1/buatTable.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        Memubat Tabel
+        Memubat Tabel<br><br>
     </head>
 
     <body>
-        <table border="1" height="100" widht="40" cellpadding="18">
+        <table border="1" height="100" widht="40" cellpadding="18" td align="right">
             <tr>
                 <td>ini baru baris pertama kolom pertama</td>
                 <td>ini baru baris pertama kolom kedua</td>
