--- a/Pertemuan1/buatTable.html
+++ b/Pertemuan1/buatTable.html
@@ -4,7 +4,7 @@
     </head>
 
     <body>
-        <table border="1" height="100" widht="40" cellpadding="18" td align="right">
+        <table border="1" height="100%" widht="40%" cellpadding="18" td align="right" valign="bottom">
             <tr>
                 <td>ini baru baris pertama kolom pertama</td>
                 <td>ini baru baris pertama kolom kedua</td>
