--- a/Pertemuan1/buatTable.html
+++ b/Pertemuan1/buatTable.html
@@ -4,9 +4,9 @@
     </head>
 
     <body>
-        <table border="1" height="100%" widht="40%" cellpadding="18" td align="right" valign="bottom">
+        <table border="1" height="100%" widht="40%" cellpadding="18">
             <tr>
-                <td>ini baru baris pertama kolom pertama</td>
+                <td align="right" valign="bottom">ini baru baris pertama kolom pertama</td>
                 <td>ini baru baris pertama kolom kedua</td>
             </tr>
             <tr>
