--- a/Pertemuan1/buatTable.html
+++ b/Pertemuan1/buatTable.html
@@ -6,7 +6,8 @@
     <body>
         <table border="1" height="100%" widht="40%" cellpadding="18">
             <tr>
-                <td align="right" valign="bottom">ini baru baris pertama kolom pertama</td>
+                <td align="right" valign="bottom">
+                    <font face=courier>ini baru baris pertama kolom pertama</font></td>
                 <td>ini baru baris pertama kolom kedua</td>
             </tr>
             <tr>
