--- a/Pertemuan1/buatTable.html
+++ b/Pertemuan1/buatTable.html
@@ -7,7 +7,7 @@
         <table border="1" height="100%" widht="40%" cellpadding="18">
             <tr>
                 <td align="right" valign="bottom">
-                    <font face=courier>ini baru baris pertama kolom pertama</font></td>
+                    <font face=courier color="red" size="15">ini baru baris pertama kolom pertama</font></td>
                 <td>ini baru baris pertama kolom kedua</td>
             </tr>
             <tr>
