--- a/Pertemuan1/buatTable.html
+++ b/Pertemuan1/buatTable.html
@@ -12,6 +12,7 @@
                 <td>tambah 1 kolom</td>
             </tr>
             <tr>
+                <td>ini baru baris kedua kolom kedua</td>
                 <td colspan="2">ini baru baris kedua kolom pertama</td>
             </tr>
         </table>
