--- a/Pertemuan1/buatTable.html
+++ b/Pertemuan1/buatTable.html
@@ -6,7 +6,7 @@
     <body>
         <table border="1" height="100%" widht="40%" cellpadding="20" cellspacing="5">
             <tr>
-                <td align="right" valign="bottom">
+                <td rowspan="2" align="right" valign="bottom">
                     <font face=courier color="red" size="15">ini baru baris pertama kolom pertama</font></td>
                 <td>ini baru baris pertama kolom kedua</td>
                 <td>tambah 1 kolom</td>
