--- a/Pertemuan1/buatForm.html
+++ b/Pertemuan1/buatForm.html
@@ -7,6 +7,7 @@
         <form method="POST" action="gambar.html">
             <h4>FORM</h4>
             <input type="text" name="var1" size="30" value="Enter your name here">
+            <input type="text" name="var1" size="30" value="Enter your adress here">
             <br><br>
             <b>Are you a student?</b>
             <input type="checkbox" name="var3">
