--- a/Pertemuan1/buatForm.html
+++ b/Pertemuan1/buatForm.html
@@ -6,7 +6,7 @@
     <body>
         <form method="POST" action="gambar.html">
             <h4>FORM</h4>
-            <input type="text" name="var1" size="30" value="Enter your name here"><br>
+            <input type="text" name="var1" size="30" value="Enter your name here"><br><br>
             <input type="text" name="var1" size="30" value="Enter your adress here">
             <br><br>
             <b>Are you a student?</b>
@@ -16,7 +16,14 @@
             <br>
                 <input type="radio" name="var4" value="r1">10 - 15 <br>
                 <input type="radio" name="var4" value="r2">16 - 20 <br>
-                <input type="radio" name="var4" value="r3">21 - 25 <br><br>
+                <input type="radio" name="var4" value="r3">21 - 25 <br>
+            <br>
+            <b>Wich one do you have?</b>
+            <br>
+                <input type="checkbox" name="vehicle1" value="Bike" checked> I have a bike<br>
+                <input type="checkbox" name="vahicle2" value="Car"> I have a car<br>
+                <input type="checkbox" name="vahicle3" value="Boat"> I have a boat<br>
+            <br>
             <input type="submit" name="var5" value="send">
             <input type="reset" name="var6" value="clear">
         </form>
