--- a/Pertemuan1/buatForm.html
+++ b/Pertemuan1/buatForm.html
@@ -20,9 +20,10 @@
             <br>
             <b>Wich one do you have?</b>
             <br>
-                <input type="checkbox" name="vehicle1" value="Bike" checked> I have a bike<br>
+                <input type="checkbox" name="vehicle1" value="Bike"> I have a bike<br>
                 <input type="checkbox" name="vahicle2" value="Car"> I have a car<br>
                 <input type="checkbox" name="vahicle3" value="Boat"> I have a boat<br>
+                <input type="checkbox" name="vahicle3" value="Plane" checked> I have a plane<br>
             <br>
             <input type="submit" name="var5" value="send">
             <input type="reset" name="var6" value="clear">
