--- a/Pertemuan1/buatForm.html
+++ b/Pertemuan1/buatForm.html
@@ -13,18 +13,26 @@
             <input type="checkbox" name="var3">
             <br><br>
             <b>How old are you?</b>
-            <br>
-                <input type="radio" name="var4" value="r1">10 - 15 <br>
-                <input type="radio" name="var4" value="r2">16 - 20 <br>
-                <input type="radio" name="var4" value="r3">21 - 25 <br>
-            <br>
+                <br>
+                    <input type="radio" name="var4" value="r1">10 - 15 <br>
+                    <input type="radio" name="var4" value="r2">16 - 20 <br>
+                    <input type="radio" name="var4" value="r3">21 - 25 <br>
+                <br>
             <b>Wich one do you have?</b>
-            <br>
-                <input type="checkbox" name="vehicle1" value="Bike"> I have a bike<br>
-                <input type="checkbox" name="vahicle2" value="Car"> I have a car<br>
-                <input type="checkbox" name="vahicle3" value="Boat"> I have a boat<br>
-                <input type="checkbox" name="vahicle3" value="Plane" checked> I have a plane<br>
-            <br>
+                <br>
+                    <input type="checkbox" name="vehicle1" value="Bike"> I have a bike<br>
+                    <input type="checkbox" name="vahicle2" value="Car"> I have a car<br>
+                    <input type="checkbox" name="vahicle3" value="Boat"> I have a boat<br>
+                    <input type="checkbox" name="vahicle3" value="Plane" checked> I have a plane<br>
+                <br>
+            <b>Where are you from?</b>
+                <br>
+                    <select>
+                        <option value="BG">Bulgaria
+                        <option value="UK">United Kingdom
+                        <option value="USA" selected>USA
+                    </select>
+                <br>
             <input type="submit" name="var5" value="send">
             <input type="reset" name="var6" value="clear">
         </form>
