--- a/Pertemuan1/buatForm.html
+++ b/Pertemuan1/buatForm.html
@@ -30,7 +30,8 @@
                     <select>
                         <option value="BG">Bulgaria
                         <option value="UK">United Kingdom
-                        <option value="USA" selected>USA
+                        <option value="USA">USA
+                        <option value="IDN" selected>Indonesia
                     </select>
                 <br>
             <input type="submit" name="var5" value="send">
