--- a/Pertemuan1/buatForm.html
+++ b/Pertemuan1/buatForm.html
@@ -27,13 +27,13 @@
                 <br>
             <b>Where are you from?</b>
                 <br>
-                    <select>
+                    <select name="var6" size="1">
                         <option value="BG">Bulgaria
                         <option value="UK">United Kingdom
                         <option value="USA">USA
                         <option value="IDN" selected>Indonesia
                     </select>
-                <br>
+                <br><br>
             <input type="submit" name="var5" value="send">
             <input type="reset" name="var6" value="clear">
         </form>
