--- a/Pertemuan1/buatForm.html
+++ b/Pertemuan1/buatForm.html
@@ -34,6 +34,9 @@
                         <option value="IDN" selected>Indonesia
                     </select>
                 <br><br>
+            <b>Enter your private code</b>
+                <input type="password" name="var7" size="30" value="">
+            <br><br>
             <input type="submit" name="var5" value="send">
             <input type="reset" name="var6" value="clear">
         </form>
