--- a/Pertemuan1/buatForm.html
+++ b/Pertemuan1/buatForm.html
@@ -4,7 +4,7 @@
     </head>
 
     <body>
-        <form method="POST" action="gambar.html">
+        <form method="Get" action="gambar.html">
             <h4>FORM</h4>
             <input type="text" name="var1" size="30" value="Enter your name here"><br><br>
             <input type="text" name="var1" size="30" value="Enter your adress here">
