--- a/Pertemuan2/index.html
+++ b/Pertemuan2/index.html
@@ -1,10 +1,12 @@
 <html>
-    <head>
-        <title>Main Page</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    
   <body>
-    <h2>Welcome To DasarWeb</h2>
+    <p>Ini adalah bebeerapa teks.</p>
+
+    <div style="background-color: lightblue">
+      <h3> Ini adalah sebuah heading di dalam elemen div</h3>
+      <p>Ini adalah teks di dalam div</p>
+    </div>
+
+    <p>This is some text.</p>
   </body>
 </html>
