--- a/Pertemuan3/javascript.html
+++ b/Pertemuan3/javascript.html
@@ -17,4 +17,6 @@
             console.log("Hello JS dari body");
         </script>
     </body>
+
+    <a href="#" onclick="alert('Yey!')">Klik aku!</a>
 </html>
