--- a/Pertemuan3/javascript.html
+++ b/Pertemuan3/javascript.html
@@ -18,5 +18,5 @@
         </script>
     </body>
 
-    <a href="#" onclick="alert('Yey!')">Klik aku!</a>
+    <a href="javascript:alert('Yey!')">Klik aku!</a>
 </html>
