--- a/Pertemuan3/index.html
+++ b/Pertemuan3/index.html
@@ -8,6 +8,6 @@
         <p>Tutorial Javascript untuk Pemula</p>
 
         <!-- Menyisipkan kode js eksternal -->
-         <script src="js/kode-program.js"></script>
+         <script src="https://www.petanikode.com/js/kode.js"></script>
     </body>
 </html>
