--- a/Pertemuan3/fungsi_javascript.html
+++ b/Pertemuan3/fungsi_javascript.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script>
-            //Membuat fungsi
-            var sayHello = () => alert("Hello World!");
+        <script type="text/javascript">
+            function total(numberA, numberB) {
+                return numberA + numberB
+            }
         </script>
     </head>
 
     <body>
-        <!--Memanggil fungsi saat link diklik-->
-        <a href="#" onclick="sayHello()">Klik Aku!</a>
+        <script type="text/javascript">
+            document.write(total(2, 3))
+        </script>
     </body>
 </html>
