--- a/Pertemuan5/JQuery/jquery.html
+++ b/Pertemuan5/JQuery/jquery.html
@@ -3,6 +3,15 @@
     <head>
         <title>Praktikum JQuery</title>
         <script src="jquery-3.7.1.js"></script>
+        <script>
+            $(document).ready(function(){
+                $("button").click(function(){
+                    alert("Ini Praktikum Minggu ke-4");
+                });
+            });
+        </script>
     </head>
-    <body></body>
+    <body>
+        <input type="button" id="button1" value="Klik Saya!"/>
+    </body>
 </html>
