--- a/Pertemuan5/JQuery/jquery.html
+++ b/Pertemuan5/JQuery/jquery.html
@@ -2,11 +2,13 @@
 <html>
     <head>
         <title>Praktikum JQuery</title>
-        <script src="jquery-3.7.1.js"></script>
+        <script type="text/javascript" src="jquery-3.7.1.js"></script>
         <script>
-                $("button").click(function(){
+            $(document).ready(function(){
+                $("#button1").click(function(){
                     alert("Ini Praktikum Minggu ke-4");
                 });
+            });
         </script>
     </head>
     <body>
